performance sctn dev started | nav style updated

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -82,3 +82,13 @@ ul {
         background-color: var(--main-orange);
     }
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    background: var(--bg-color);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--main-orange);
+    border-radius: 10px;
+}
