--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,6 +14,7 @@
     box-sizing: border-box;
     font-family: "Ysabeau Infant", sans-serif;
     color: var(--main-white);
+    transition: .4s;
 }
 
 
