--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -96,3 +96,13 @@ ul {
     background: var(--main-orange);
     border-radius: 10px;
 }
+
+.all-title-45 {
+    font-size: 45px;
+    line-height: 110%;
+    font-weight: 600;
+
+    &::first-letter {
+        text-transform: uppercase;
+    }
+}
